{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 30,
  "lineage": "d2e05588-7a63-b540-ddb8-bbbdac29eab1",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:894695242608:vpc/vpc-0e27c47dd1f9c4fb9",
            "cidr_block": "172.18.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-05b3c18540f92c42f",
                "cidr_block": "172.18.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-5debb13a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e27c47dd1f9c4fb9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e022b2fde281dc4d",
            "owner_id": "894695242608",
            "tags": {
              "Name": "nau-cse-dev-ap-southeast-2-tools",
              "bu": "cse",
              "company": "nau",
              "environment": "dev",
              "monit": "true",
              "owner": "cse-nca@news.com.au",
              "product": "tools"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:894695242608:listener/app/test/207e3d4cf46e44f7/69f15fe1eac06cee",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:894695242608:targetgroup/test/4e6656000b16c093",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:894695242608:listener/app/test/207e3d4cf46e44f7/69f15fe1eac06cee",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:894695242608:loadbalancer/app/test/207e3d4cf46e44f7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "business": "nie",
              "company": "nct",
              "environment": "dev",
              "owner": "daniel.wan@news.com.au",
              "product": "poc"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.test",
            "aws_lb.test",
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:894695242608:targetgroup/test/4e6656000b16c093",
            "arn_suffix": "targetgroup/test/4e6656000b16c093",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:894695242608:targetgroup/test/4e6656000b16c093",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "test",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "business": "nie",
              "company": "nct",
              "environment": "dev",
              "owner": "daniel.wan@news.com.au",
              "product": "poc"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0e27c47dd1f9c4fb9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:894695242608:loadbalancer/app/test/207e3d4cf46e44f7",
            "arn_suffix": "app/test/207e3d4cf46e44f7",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-test-1498283807.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:894695242608:loadbalancer/app/test/207e3d4cf46e44f7",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test",
            "security_groups": [
              "sg-0b945f24047f608e6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-012ba337a6a326388"
              },
              {
                "subnet_id": "subnet-0b353a2494a717e10"
              },
              {
                "subnet_id": "subnet-0edc833fe02b3cbc5"
              }
            ],
            "subnets": [
              "subnet-012ba337a6a326388",
              "subnet-0b353a2494a717e10",
              "subnet-0edc833fe02b3cbc5"
            ],
            "tags_all": {
              "business": "nie",
              "company": "nct",
              "environment": "dev",
              "owner": "daniel.wan@news.com.au",
              "product": "poc"
            },
            "vpc_id": "vpc-0e27c47dd1f9c4fb9",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:894695242608:security-group/sg-0b945f24047f608e6",
            "description": "ALB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b945f24047f608e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.18.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "test_ecs_alb_sg",
            "name_prefix": "",
            "owner_id": "894695242608",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "business": "nie",
              "company": "nct",
              "environment": "dev",
              "owner": "daniel.wan@news.com.au",
              "product": "poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e27c47dd1f9c4fb9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "container_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:894695242608:security-group/sg-02c725d8aa7682043",
            "description": "Container SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c725d8aa7682043",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.18.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "test_ecs_container_sg",
            "name_prefix": "",
            "owner_id": "894695242608",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "business": "nie",
              "company": "nct",
              "environment": "dev",
              "owner": "daniel.wan@news.com.au",
              "product": "poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e27c47dd1f9c4fb9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_sg_rule_egress_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4067940788",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b945f24047f608e6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_sg_rule_ingress_allow_internal_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-384412269",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b945f24047f608e6",
            "self": true,
            "source_security_group_id": "sg-0b945f24047f608e6",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_sg_rule_ingress_allow_vpc_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.18.0.0/16"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2634095556",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b945f24047f608e6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "container_sg_rule_egress_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1251237693",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02c725d8aa7682043",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.container_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "container_sg_rule_ingress_allow_internal_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3743365447",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02c725d8aa7682043",
            "self": true,
            "source_security_group_id": "sg-02c725d8aa7682043",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.container_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "container_sg_rule_ingress_allow_vpc_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.18.0.0/16"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1853713033",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02c725d8aa7682043",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.container_sg",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}